# ingest-tauri

./: .gitignore  .prettierrc.json  BUILD_PROJECT_FIXES.md  BUILD_PROJECT_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  LARGE_FILE_UPLOAD_FIXES.md  LICENSE  PERFORMANCE_OPTIMIZATION_PLAN.md  PRD.md  README.md  TECHNICAL_DEBT.md  UPDATE_MECHANISM_ANALYSIS.md  babel.config.cjs  blueprint.json  blueprint.md  bun.lockb  components.json  eslint.config.js  index.html  jest.config.cjs  latest.json  linting-tasks.md  macos-window-styling-plan.md  package.json  prettier.config.js  tailwind.config.ts  test-script-business.txt  tsconfig.json  uploadsproutfixes.md  vite.config.ts
.github/: renovate.json
.serena/: project.yml
docs/: API_COMMANDS.md  ARCHITECTURE.md  BRANCHING_STRATEGY.md  ONBOARDING.md  PHASE_007_TEST_STATUS.md  PHASE_4_ERROR_ANALYSIS.md  PHASE_4_PROGRESS.md  PHASE_4_SESSION_SUMMARY.md  PREMIERE_PLUGINS.md  README.md  TEST_COVERAGE_ANALYSIS.md  TEST_FAILURES_TODO.md  debt-001-progress.md  debt-005-progress.md  debt-009-complete.md  debt-009-phase2-progress.md  debt-009-test-plan.md  debt-010-progress.md  debt-014-completion.md  debt-021-analysis.md  macos-window-styling.md  npm-to-bun-migration.md  react-query-patterns.md  security-audit.md  theme-architecture.md  theme-customization.md  update-report-v0.8.1.md
memory/: constitution.md
playwright-report/: index.html
scripts/: bump-version.js  embed-examples-ollama.js  embed-examples.js  migrate-tests.sh  quickstart-validation.sh  replace-console-with-logger.py  security-audit.sh  test-rag.js  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.entitlements.mac.plist
src-tauri/assets/: Premiere 4K Template 2023.prproj  Premiere 4K Template 2025.prproj
src-tauri/assets/plugins/: Boring_v0.5.2.zxp  BreadcrumbsPremiere_v0.6.6.zxp
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/embeddings/: examples.db
src-tauri/resources/examples/business-presentation-1/: after.txt  before.txt  metadata.json
src-tauri/resources/examples/educational-lecture-1/: after.txt  before.txt  metadata.json
src-tauri/src/: baker.rs  command.rs  lib.rs  main.rs  media.rs  sprout_upload.rs
src-tauri/src/commands/: ai_provider.rs  auth.rs  docx.rs  file_ops.rs  mod.rs  plugins.rs  premiere.rs  rag.rs  sprout_upload.rs  system.rs
src-tauri/src/commands/tests/: mod.rs  premiere_test.rs  rag_tests.rs  rag_validation_tests.rs
src-tauri/src/state/: auth.rs
src-tauri/src/utils/: file_copy.rs  mod.rs
src-tauri/tests/: ai_provider_commands.rs  docx_commands.rs
(+626 files in other folders)
