[package]
name = "Bucket"
version = "0.12.1"
description = "An app to streamline ingesting and uploading video content"
authors = ["Daniel Mills"]
license = "UNLICENSED"
repository = "https://github.com/twentynineteen/bucket"
default-run = "Bucket"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }


[dependencies]
tauri-plugin-dialog = "2.4.0"
tauri = { version = "2.9", features = ["macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
jsonwebtoken = "9.3.1"
chrono = "0.4.39"
dotenv = "0.15.0"
zip = "0.6"
dirs = "5.0"
tauri-plugin-http = "2.3.0"
tauri-plugin-fs = "2.4.2"
log = "0.4"
simple_logger = "4.0"
fs = "0.0.5"
argon2 = "0.5"
tauri-plugin-macos-permissions = "2.0.4"
quick-xml = "0.29"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-shell = "2.3.1"
tauri-plugin-opener = "2.5.0"
reqwest = { version = "0.11", features = ["multipart", "blocking", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.13"
futures-util = "0.3.31"
bytes = "1"
tauri-plugin-deep-link = "2.4.3"
base64ct = "1.6.0"
uuid = { version = "1.0", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.10"
glib = "0.20.0"




[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
incremental = true      # Compile your binary in smaller steps.

[profile.release]
strip = true            # Automatically strip symbols from the binary
panic = "abort"         # Strip expensive panic clean-up logic
codegen-units = 1       # Compile crates one after another so the compiler can optimize better
lto = true              # Enables link to optimizations
opt-level = "s"         # Optimize for binary size. Use `3` if you prefer speed.

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.9.0"

[profile.dev.package.objc2]
debug-assertions = false

[dev-dependencies]
tempfile = "3.8"
glib = "0.20.0"
